[gd_scene load_steps=3 format=3 uid="uid://213xvopfalw1"]

[ext_resource type="Script" uid="uid://bni828n61mhl8" path="res://map_matrix_entry.gd" id="1_0508c"]
[ext_resource type="PackedScene" uid="uid://dslja1542pqi4" path="res://destination_entry.tscn" id="2_0508c"]

[node name="Entry" type="PanelContainer"]
script = ExtResource("1_0508c")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="OriginMapName" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Test map name"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="AddDestinationButton" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "+"

[node name="NormalizePertentagesButton" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "=%"

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="DestinationContainer" type="HFlowContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Entry" parent="HBoxContainer/DestinationContainer" instance=ExtResource("2_0508c")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[connection signal="pressed" from="HBoxContainer/VBoxContainer/AddDestinationButton" to="." method="_on_add_destination_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/NormalizePertentagesButton" to="." method="_on_normalize_pertentages_button_pressed"]
